Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-frontend-to-backend
    namespace: traffic-control
spec:
    podSelector:
        matchLabels:
            role: back-end-api
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    role: front-end
          
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-admin-frontend-to-admin-backend
    namespace: traffic-control
spec:
    podSelector:
        matchLabels:
            role: admin-back-end-api
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    role: admin-front-end
                    
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-others-to-backend
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
  ingress: []
  
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-others-to-admin-backend
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress: []
